# Lab5

./: CMakeLists.txt
.github/workflows/: coverage.yml
banking/: CMakeLists.txt
banking/.github/workflows/: coverage.yml
banking/tests/: CMakeLists.txt  test_account.cpp  test_transaction.cpp
tests/: CMakeLists.txt
